Prevented Wrap on Sidebar Close

--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -56,6 +56,9 @@
 	overflow-x: hidden;
 	background-color: gray;
 }
+.channellist a {
+	white-space: nowrap;
+}
 .formBox {
 	width: 100%;
 	background-color: #23272A;
